cambio de nombre

--- a/Contact.html
+++ b/Contact.html
@@ -5,7 +5,7 @@
     
     
     <link rel="stylesheet" href="./estilos.css">
-    <title>Contacto</title>
+    <title>Contact</title>
 </head>
 <body>
     <div class="estilo">
