--- a/Contact.html
+++ b/Contact.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
-    
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" type="text/css" href="./estilos.css">
     <title>Contact</title>
 </head>
 <body>
